--- a/secure/spectrum.css
+++ b/secure/spectrum.css
@@ -250,10 +250,14 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 */
 
 .sp-container {
-    border-radius: 0;
-    background-color: #ECECEC;
-    border: solid 1px #f0c49B;
+    background-color: #13171d;
+    border: solid 1px #414f65;
     padding: 0;
+    border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
 }
 .sp-container, .sp-container button, .sp-container input, .sp-color, .sp-hue, .sp-clear
 {
@@ -310,7 +314,6 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 .sp-picker-container
 {
     width: 172px;
-    border-left: solid 1px #fff;
 }
 
 /* Palettes */
@@ -363,6 +366,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 
 /* Replacer (the little preview div that shows up instead of the <input>) */
 .sp-replacer {
+	/*
     margin:0;
     overflow:hidden;
     cursor:pointer;
@@ -374,6 +378,20 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     background: #eee;
     color: #333;
     vertical-align: middle;
+    */
+    
+    position: relative;
+	float: right;
+	width: 87px;
+	height: 34px;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
+	cursor:pointer;
+	*zoom: 1;
+    *display: inline;
 }
 .sp-replacer:hover, .sp-replacer.sp-active {
     border-color: #F0C49B;
@@ -385,6 +403,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     color: silver;
 }
 .sp-dd {
+	display: none;
     padding: 2px 0;
     height: 16px;
     line-height: 16px;
@@ -394,12 +413,16 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
 .sp-preview
 {
     position:relative;
-    width:25px;
-    height: 20px;
-    border: solid 1px #222;
-    margin-right: 5px;
-    float:left;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    margin-right: 0;
+    float: none;
     z-index: 0;
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
 }
 
 .sp-palette
@@ -420,8 +443,28 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     padding-bottom:0;
 }
 
+.sp-container button {
+	padding: 10px 15px;
+	border: 0;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	-ms-border-radius: 6px;
+	-o-border-radius: 6px;
+	cursor: pointer;
+	background-color: #3e4958;
+	background-repeat: no-repeat;
+	background-position: right center;
 
-/* Buttons: http://hellohappy.org/css3-buttons/ */
+	font-family: "Source Sans Pro";
+	color: white;
+	font-weight: 400;
+	text-transform: uppercase;
+	font-size: 15px;
+}
+.sp-container button:hover {
+	background-color: #1f252d;
+}
+/* Buttons: http://hellohappy.org/css3-buttons/ 
 .sp-container button {
   background-color: #eeeeee;
   background-image: -webkit-linear-gradient(top, #eeeeee, #cccccc);
@@ -461,6 +504,7 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     -o-box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
     box-shadow: inset 0 0 5px 2px #aaaaaa, 0 1px 0 0 #eeeeee;
 }
+*/
 .sp-cancel
 {
     font-size: 11px;
@@ -494,6 +538,10 @@ See http://bgrins.github.io/spectrum/themes/ for instructions.
     display:block;
     position:absolute;
     top:0;left:0;bottom:0;right:0;
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
 }
 
 .sp-palette .sp-thumb-inner
